<?xml version="1.0" encoding="utf-8"?>
<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true"
		android:id="@+id/svRecipe"
		>

	<android.support.constraint.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			>

		<ImageView
				android:layout_width="match_parent"
				android:layout_height="200dp"
				android:contentDescription="@string/recipe_image_content_description"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				android:src="@drawable/ic_baseline_fastfood"
				style="@style/recipe.RecipeImage"
				android:id="@+id/ivRecipe"
				/>

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/tvServing"
				tools:text="Serve 8 pessoas"
				app:layout_constraintTop_toBottomOf="@+id/ivRecipe"
				app:layout_constraintStart_toStartOf="parent"
				style="@style/recipe.servingLabel"
				/>

		<TextView
				android:text="@string/recipe_ingredient_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="@style/recipe.label"
				android:id="@+id/textView"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tvServing"
				/>

		<android.support.v7.widget.RecyclerView
				android:layout_width="match_parent"
				android:layout_height="150dp"
				android:minHeight="150dp"
				app:layout_constraintHeight_min="150dp"
				style="@style/recipe.recycleView"
				android:id="@+id/rvIngredient"
				app:layout_constraintTop_toBottomOf="@+id/textView"
				app:layout_constraintStart_toStartOf="@+id/textView"
				/>

		<TextView
				android:text="@string/recipe_steps_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/textView2"
				android:layout_marginTop="8dp"
				app:layout_constraintTop_toBottomOf="@+id/rvIngredient"
				app:layout_constraintStart_toStartOf="parent"
				android:layout_marginLeft="8dp"
				android:layout_marginStart="8dp"
				style="@style/recipe.label"
				/>

		<android.support.v7.widget.RecyclerView
				android:id="@+id/rvStep"
				style="@style/recipe.recycleView"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:minHeight="150dp"
				app:layout_constraintHeight_min="150dp"
				app:layout_constraintStart_toStartOf="@+id/textView2"
				app:layout_constraintTop_toBottomOf="@+id/textView2"
				app:layout_constraintBottom_toBottomOf="parent"
				/>

	</android.support.constraint.ConstraintLayout>

</ScrollView>
