<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context="com.alex.baking.app.ui.view.StepActivity"
		>

	<com.google.android.exoplayer2.ui.PlayerView
			android:id="@+id/pvStep"
			android:layout_width="match_parent"
			android:layout_alignParentStart="true"
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"
			style="@style/step.videoPlayer"
			>
	</com.google.android.exoplayer2.ui.PlayerView>

	<TextView
			tools:text="Colocar na panela"
			style="@style/detail.textDetailsLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/tvShortDescription"
			android:layout_below="@+id/pvStep"
			/>

	<ScrollView
			android:id="@+id/svDescription"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/tvShortDescription"
			android:layout_above="@+id/btNextStep"
			android:fillViewport="true"
			>

		<TextView
				style="@style/step.description"
				android:layout_marginTop="0dp"
				android:layout_marginBottom="0dp"
				tools:text="Description da etapa adsfasd fads fads \n asdfadsfasdf \n a adf adsf "
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/tvDescription"
				/>
	</ScrollView>

	<Button
			android:text="@string/step_bt_next"
			tools:visibility="visible"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/btNextStep"
			android:layout_alignParentBottom="true"
			android:layout_centerHorizontal="true"
			style="@style/step.btNext"
			/>

</RelativeLayout>
