<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context="com.alex.baking.app.ui.view.StepActivity">

	<include
			android:id="@+id/includedLayout"
			layout="@layout/default_activity_layout"
			tools:visibility="visible"
			tools:background="@color/colorAccent"
			app:layout_constraintTop_toTopOf="parent"
			style="@style/toobarActionBar"
			/>

	<FrameLayout
			android:id="@+id/flStepContainer"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/includedLayout"
			app:layout_constraintBottom_toBottomOf="parent"
			/>

</android.support.constraint.ConstraintLayout>
